hello-node/hello-node-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    service.beta.kubernetes.io/openstack-internal-load-balancer: "true"
  labels:
    name: hello-node
  name: hello-node
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    name: hello-node
  type: LoadBalancer
