hello-node/hello-node-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-node
  name: hello-node
spec:
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  selector:
    name: hello-node
  type: NodePort
